# apex_mc_generator

./: .gitignore  README.md  script_gen-A-prime  script_gen-Bethe-Heitler  script_gen-Q1-tracks
g4mc/: CMakeLists.txt  CMakeLists.txt~  G2P_G4Sim_Log.txt  G4MC.cc  G4MC.cc~  README.md  compile.sh  run_simc.sh  run_simc.sh~  testrun.sh  testrun.sh~
g4mc/files_in/: Detector.ini~  G2P_G4Sim_Log.txt  HRSUsage.ini~  gmon.out  run_settings.mac  run_settings.mac~
g4mc/include/: BField_Dipole_Fringe.hh  BField_Fringe_QQ.hh  BField_Helm.hh  BField_Quad.hh  BField_Septum.hh  BField_Septum_New.hh  CREXDetectorConstruction.hh-  HRSCalorimeterSD.hh  HRSDCHit.hh  HRSDetectorConstruction.hh  HRSEMFieldSetup.hh  HRSEMFieldSetupMessenger.hh  HRSEventAction.hh  HRSFZMagField.hh  HRSGlobal.hh  HRSRand.hh  (+13 more)
sieve_simulation/: G4History.macro  exampleB1.cc  init_vis.mac  run.mac  run_flat.mac  slurm_run.mac  slurm_script  slurm_script_flat  vis_snapshot.mac
simc_hrs/: CMakeLists.txt  CMakeLists.txt~  README.md  compile.sh~  simc_hrs  simc_hrs.cc  simc_hrs.cc~  simc_hrs_LinkDef.h  simc_hrs_LinkDef.h~  simc_hrs_coinc.cc
simc_hrs/test_dir/: CMakeLists.txt  CMakeLists.txt~  compile.sh  fortran_functs.cc  fortran_functs.cc~  hrsl_exec.cc~  make_test_histogram.C  my_subrt.f  my_subrt.f~
simc_hrs/test_dir/include_cc/: fortran_functs.c  fortran_functs.hh  fortran_functs.hh~
simulate_electron_scattering/: G4History.macro  count_particles_in_momentum_range.C  exampleB1  execute_variable_thickness.sh  init_vis.mac  run.mac  run_flat_target.mac  run_variable_thickness.mac  slurm_tungsten_foil
(+221 files in other folders)
